syntax = "proto3";

option go_package = "github.com/maglink/products-fetcher/pkg/messages";

package messages;

service ProductsFetcher {
  rpc Fetch (FetchRequest) returns (FetchResponse) {}
  rpc List (ListRequest) returns (ListResponse) {}
}

message FetchRequest {
  string url = 1;
}

enum Status {
  OK = 0;
  ERROR = 1;
}

message FetchResponse {
  Status status = 1;
  string errMessage = 2;
}

message ListRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  message OrderOptions {
    enum Field {
      NAME = 0;
      PRICE = 1;
      LAST_UPDATE = 2;
      UPDATES_COUNT = 3;
    }
    Field field = 1;
    enum Direction {
      ASC = 0;
      DESC = 1;
    }
    Direction direction = 2;
  }
  repeated OrderOptions order = 3;
}

message ListResponse {
  Status status = 1;
  string errMessage = 2;
  message ListEntry {
    string name = 1;
    float price = 2;
    int64 last_update = 3;
    uint32 updates_count = 4;
  }
  repeated ListEntry list = 3;
}